<resources>
    <string name="app_name">天天资讯</string>
    <string name="account_name">com.gbq.account</string>
    <string name="please_wait">请稍候</string>

    <string name="skip">跳过(%1$ds)</string>
    <string name="str_home_page">首页</string>
    <string name="str_user">用户名</string>
    <string name="str_user_tips">请输入用户名</string>
    <string name="str_password">密码</string>
    <string name="str_password_tips">请输入密码</string>
    <string name="tips_reset">忘记密码</string>
    <string name="remember">记住密码</string>
    <string name="str_login">登录</string>
    <string name="str_regist">注册</string>

    <!-- 注册页面 -->
    <string name="welcome_tips">欢迎注册</string>
    <string name="user_input">用户名</string>
    <string name="button_register">注册</string>
    <string name="button_quick_register">快捷注册</string>
    <string name="tel_input">手机号码</string>
    <string name="code_tips">请输入验证码</string>
    <string name="code_button">获取验证码</string>
    <string name="agree_tips">我已经阅读并同意《用户协议》</string>
    <string name="buttom_tips">欢迎使用天天资讯</string>

    <!-- 注册成功页面 -->
    <string name="tips_register_success">恭喜您注册成功！</string>
    <string name="show_userName">您的用户名：</string>
    <string name="show_password">您的密码是，请记下：</string>
    <string name="tips_toPersonal">进入个人中心：</string>
    <string name="toPersonal">个人中心</string>
    <string name="pass_tips">请输入密码</string>

    <!--新闻页面 -->
    <string name="tab">tab</string>
    <string name="global">国际新闻</string>
    <string name="pe_news">体育新闻</string>
    <string name="te_news">科技新闻</string>

    <!-- 个人中心 -->
    <string name="toIndex">首页</string>
    <string name="toMy">我的账号</string>
    <string name="eg_name">高炳秋</string>
    <string name="eg_vip">尊贵的VIP</string>
    <string name="eg_rest">第1次登陆</string>
    <string name="detail">浏览新闻资讯</string>
    <string name="to_real">实名认证</string>
    <string name="to_tel">手机绑定</string>
    <string name="to_email">邮箱绑定</string>
    <string name="to_password">登录密码管理</string>
    <string name="to_answer">常见问题</string>
    <string name="toOut">退出登录</string>
</resources>
