<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/et_tel"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@mipmap/login_user"
        android:hint="@string/tel_input"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableStart="@mipmap/msg"
            android:hint="@string/code_tips"
            android:inputType="number"/>

        <Button
            android:id="@+id/bt_fetch_code"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#00cc00"
            android:text="@string/code_button"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableStart="@mipmap/login_pwd"
        android:hint="@string/pass_tips"
        android:inputType="textPassword"/>

    <LinearLayout
        android:id="@+id/rem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/remenber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_tips"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#cc0000"
        android:text="@string/button_register"
        android:textColor="#FFFFFF"/>

    <Button
        android:id="@+id/bt_quick_register"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#808080"
        android:contentDescription="@string/app_name"
        android:text="@string/button_quick_register"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/buttom_tips"
        android:textSize="20sp"/>

</LinearLayout>