<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <!-- 导航栏 -->

    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ff6600">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fba870"
            android:paddingLeft="30dp">

            <TextView
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/toIndex"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/toIndex"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/jt1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:background="#fba870"
            android:paddingRight="0dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/toMy"
                android:textColor="#ffffff"
                android:textSize="20sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/toMy"
            android:layout_width="16dp"
            android:layout_height="45dp"
            android:layout_marginRight="0dp"
            android:contentDescription="@string/app_name"
            android:paddingRight="0dp"
            android:src="@mipmap/jt2_2"/>
    </LinearLayout>
    <!-- 导航栏end -->


    <!-- 个人信息begin -->

    <LinearLayout
        android:id="@+id/ll_user_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:layout_marginBottom="10dp"
        android:background="#ee6e0a"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/toPersonal"
                android:textColor="#ffffff"
                android:textSize="25sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp">

            <ImageView
                android:id="@+id/iv_user_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/personal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/eg_name"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/eg_vip"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="@string/eg_rest"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_to_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:background="@drawable/button_under"
            android:gravity="center_vertical"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:textSize="15sp"/>
    </LinearLayout>
    <!-- 个人信息end -->


    <!-- 链接begin -->

    <com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView
        android:id="@+id/main_recycler"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_user_info"/>
    <!-- 链接end -->

    <Button
        android:id="@+id/bt_user_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:text="@string/toOut"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:textSize="25sp"/>

</RelativeLayout>