<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_switch_tab_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:id="@+id/ll_tab_global"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round_selector"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dip">

            <TextView
                android:id="@+id/tv_news_global"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/global"
                android:textColor="#0000FF"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_pe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round_selector"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dip"
            android:saveEnabled="false">

            <TextView
                android:id="@+id/tv_news_sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pe_news"
                android:textColor="#000000"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab_te"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/guide_round_selector"
            android:focusable="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dip">

            <TextView
                android:id="@+id/tv_news_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/te_news"
                android:textColor="#000000"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_tab_line"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@mipmap/tab_selected_pressed_holo"
        android:contentDescription="@string/tab">
    </ImageView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

</LinearLayout>